--- a/data/carousel/multipurpose.yaml
+++ b/data/carousel/multipurpose.yaml
@@ -1,4 +1,6 @@
 weight: 1
 title: "T-RAX Chalmers Makerspace"
-description: "<p>Water jet. Laser. VR.<br></p>"
+description: "<p>Water jet. Laser. VR.</p>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br>"
 image: "img/carousel/"
