WIP shortcode for makerspace page done

--- a/data/carousel/multipurpose.yaml
+++ b/data/carousel/multipurpose.yaml
@@ -1,6 +1,5 @@
 weight: 1
 title: "T-RAX Chalmers Makerspace"
-description: "<p>Water jet. Laser. VR.</p>
-<br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br>"
-image: "img/carousel/"
+description: "<p>The largest makerspace in Norden</p>
+<p>Water jet. Laser. VR.</p>"
+image: "img/logo_transparent_white.png"
