--- a/config.toml
+++ b/config.toml
@@ -30,67 +30,10 @@ pluralizelisttitles = false
 
 [[menu.main]]
     name       = "Makerspace"
-    identifier = "menu.features"
-    url        = "/img/template-easy-customize.png"
+    identifier = "menu.makerspace"
+    url        = "/makerspace/"
     weight     = 2
 
-[[menu.main]]
-    name       = "Spaces"
-    identifier = "section.spaces"
-    url        = ""
-    weight     = 1
-    parent     = "menu.features"
-    post       = 1
-
-[[menu.main]]
-    name       = "Materials"
-    identifier = "section.materials"
-    url        = ""
-    weight     = 2
-    parent     = "menu.features"
-    post       = 2
-
-[[menu.main]]
-    name       = "Rapid prototyping"
-    url        = ""
-    weight     = 1
-    parent     = "section.spaces"
-
-[[menu.main]]
-    name       = "Metal"
-    url        = ""
-    weight     = 2
-    parent     = "section.spaces"
-
-[[menu.main]]
-    name       = "Wood"
-    url        = ""
-    weight     = 3
-    parent     = "section.spaces"
-
-[[menu.main]]
-    name       = "Textile"
-    url        = ""
-    weight     = 4
-    parent     = "section.spaces"
-
-[[menu.main]]
-    name       = "Electronics"
-    url        = ""
-    weight     = 5
-    parent     = "section.spaces"
-
-[[menu.main]]
-    name       = "VR studio"
-    url        = ""
-    weight     = 6
-    parent     = "section.spaces"
-
-[[menu.main]]
-    name       = "Film & Pod studio"
-    url        = ""
-    weight     = 7
-    parent     = "section.spaces"
 
 [[menu.main]]
     name       = "FAQ"
@@ -141,8 +84,8 @@ pluralizelisttitles = false
     pre = "<i class='fas fa-2x fa-envelope'></i>"
 
 [params]
-    author = "DevCows"
-    defaultKeywords = ["devcows", "hugo", "go"]
+    author = "kjeller"
+    defaultKeywords = ["hugo", "go"]
     mainSections = ["blog"]
     defaultDescription = "Site template made by Devcows using Hugo"
 
@@ -206,7 +149,7 @@ pluralizelisttitles = false
     logo_text = "T-RAX"
 
     logo = "img/logo.png"
-    logo_small = "img/logo-small.png"
+    # logo_small = "img/logo-small.png"
     contact_url = "/contact"
     address = """<p class="text-uppercase"><strong>Universal Ltd.</strong>
         <br>13/25 New Avenue
@@ -226,12 +169,6 @@ pluralizelisttitles = false
       <a href="mailto:hello@universal.com" data-animate-hover="pulse"><i class="fas fa-envelope"></i></a>
       </p>
       """
-
-# Enable and disable widgets for the right sidebar
-[params.widgets]
-    categories = true
-    tags = true
-    search = true
 
 [params.carouselCustomers]
     items = 6
