--- a/config.toml
+++ b/config.toml
@@ -34,24 +34,64 @@ pluralizelisttitles = false
     url        = "/makerspace/"
     weight     = 2
 
+[[menu.main]]
+    name       = "FUSE"
+    identifier = "menu.fuse"
+    url        = "/fuse/"
+    weight     = 3
+
+[[menu.main]]
+    name       = "Courses"
+    identifier = "menu.courses"
+    url        = "/courses/"
+    weight     = 4
+
+
+# TODO make this a dropdown
+[[menu.main]]
+    name       = "About Us"
+    identifier = "menu.about"
+    url        = ""
+    weight     = 5
+
+[[menu.main]]
+    name       = "The Board"
+    parent     = "menu.about"
+    identifier = "menu.the-board"
+    url        = "/the-board"
+    weight     = 1
+
+[[menu.main]]
+    name       = "Documents"
+    parent     = "menu.about"
+    identifier = "menu.docs"
+    url        = "/about/docs"
+    weight     = 2
+
+[[menu.main]]
+    name       = "Rules"
+    parent     = "menu.about"
+    identifier = "menu.rules"
+    url        = "/rules"
+    weight     = 3
+
+[[menu.main]]
+    name       = "Inspiration"
+    identifier = "menu.inspiration"
+    url        = "/inspiration/"
+    weight     = 6
 
 [[menu.main]]
     name       = "FAQ"
     identifier = "menu.faq"
     url        = "/faq/"
-    weight     = 3
-
-[[menu.main]]
-    name       = "About Us"
-    identifier = "menu.about"
-    url        = "/about/"
-    weight     = 4
+    weight     = 7
 
 [[menu.main]]
     name       = "Become a member"
     identifier = "menu.membership"
     url        = "/membership/"
-    weight     = 5
+    weight     = 8
 
 [[menu.topbar]]
     weight = 1
