Remove universal theme since we override everything anyways

--- a/data/makerspace/electronics.yaml
+++ b/data/makerspace/electronics.yaml
@@ -1,4 +1,5 @@
 weight: 5
 name: "Electronics lab"
 description: "Electronics lab descriptive text"
+url: "/makerspace/electronics"
 hasCourse: true
