--- a/data/makerspace/film_and_pod.yaml
+++ b/data/makerspace/film_and_pod.yaml
@@ -1,4 +1,5 @@
 weight: 7
 name: "Film & pod studio"
 description: "Film & pod studio descriptive text"
+url: "/makerspace/film_and_pod"
 hasCourse: true
