--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://trax.chs.chalmers.se/"
 title = "T-RAX Chalmers Makerspace"
-theme = "hugo-universal-theme"
+# theme = "hugo-universal-theme"
 languageCode = "en-us"
 # Site language. Available translations in the theme's `/i18n` directory.
 defaultContentLanguage = "en"
