--- a/data/carousel/multipurpose.yaml
+++ b/data/carousel/multipurpose.yaml
@@ -1,5 +1,5 @@
 weight: 1
-title: "T-RAX Chalmers Makerspace"
-description: "<p>The largest makerspace in Norden</p>
-<p>Water jet. Laser. VR.</p>"
+title: "The largest makerspace in Norden
+Water jet. Laser. VR."
+description: ""
 image: "img/logo_transparent_white.png"
