Add code of conduct and regulations
Add shortcode for WIP pages

--- a/config.toml
+++ b/config.toml
@@ -72,7 +72,7 @@ pluralizelisttitles = false
     name       = "Rules"
     parent     = "menu.about"
     identifier = "menu.rules"
-    url        = "/rules"
+    url        = "/about/rules"
     weight     = 3
 
 [[menu.main]]
