Added some more stock photos for makerspace cards
Need fixed size on image and text now it looks wonky

--- a/data/makerspace/electronics.yaml
+++ b/data/makerspace/electronics.yaml
@@ -2,4 +2,6 @@ weight: 5
 name: "Electronics lab"
 description: "Electronics lab descriptive text"
 url: "/makerspace/electronics"
+# temp image by Michael Schwarzenberger from Pixabay
+small_img: "img/makerspace/generic_pcb.jpg"
 hasCourse: true
