--- a/data/makerspace/vr.yaml
+++ b/data/makerspace/vr.yaml
@@ -2,4 +2,6 @@ weight: 6
 name: "VR studio"
 description: "VR studio descriptive text"
 url: "/makerspace/vr"
+# temp image by Achin bm from Pixabay
+small_img: "/img/makerspace/vr-g28c418f50_640.png"
 hasCourse: false
