--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,8 @@
 baseurl = "https://trax.chs.chalmers.se/"
 title = "T-RAX Chalmers Makerspace"
-# theme = "hugo-universal-theme"
 languageCode = "en-us"
-# Site language. Available translations in the theme's `/i18n` directory.
 defaultContentLanguage = "en"
-# Enable comments by entering your Disqus shortname
-disqusShortname = "devcows"
+
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = ""
 
@@ -19,7 +16,6 @@ paginate = 10
 pluralizelisttitles = false
 
 [menu]
-
 
 # Main menu
 [[menu.main]]
@@ -46,8 +42,6 @@ pluralizelisttitles = false
     url        = "/courses/"
     weight     = 4
 
-
-# TODO make this a dropdown
 [[menu.main]]
     name       = "About Us"
     identifier = "menu.about"
@@ -93,46 +87,11 @@ pluralizelisttitles = false
     url        = "/membership/"
     weight     = 8
 
-[[menu.topbar]]
-    weight = 1
-    name = "GitHub"
-    url = "https://github.com/ChalmersTRAX"
-    pre = "<i class='fab fa-2x fa-github'></i>"
-
-[[menu.topbar]]
-    weight = 2
-    name = "Facebook"
-    url = "https://www.facebook.com/ChalmersTRAX"
-    pre = "<i class='fab fa-2x fa-facebook'></i>"
-
-[[menu.topbar]]
-    weight = 3
-    name = "LinkedIn"
-    url = "https://www.linkedin.com/company/chalmers-t-rax/"
-    pre = "<i class='fab fa-2x fa-linkedin'></i>"
-
-[[menu.topbar]]
-    weight = 4
-    name = "Instagram"
-    url = "https://www.instagram.com/Chalmerstrax/"
-    pre = "<i class='fab fa-2x fa-instagram'></i>"
-
-[[menu.topbar]]
-    weight = 5
-    name = "Email"
-    url = "mailto:chalmerstrax@gmail.com"
-    pre = "<i class='fas fa-2x fa-envelope'></i>"
-
 [params]
     author = "kjeller"
     defaultKeywords = ["hugo", "go"]
     mainSections = ["blog"]
     defaultDescription = "Site template made by Devcows using Hugo"
-
-    # Social media
-    facebook_site = "" # the Facebook handle of your site ('https://www.facebook.com/HANDLE')
-    twitter_site = "GoHugoIO" # the Twitter handle of your site (without the '@')
-    default_sharing_image = "img/sharing-default.png"
 
     # Google Maps widget: If `googleMapsApiKey` is not set, no key will be passed to Google (which likely results in a broken map widget).
     enableGoogleMaps = true
@@ -200,15 +159,6 @@ pluralizelisttitles = false
         <strong>Great Britain</strong>
       </p>
       """
-      
-# Enable or disable top bar with social icons
-[params.topbar]
-    enable = true
-    text = """<p class="hidden-sm hidden-xs">Contact us on +420 777 555 333 or hello@universal.com.</p>
-      <p class="hidden-md hidden-lg"><a href="tel:+420 777 555 333" data-animate-hover="pulse"><i class="fas fa-phone"></i></a>
-      <a href="mailto:hello@universal.com" data-animate-hover="pulse"><i class="fas fa-envelope"></i></a>
-      </p>
-      """
 
 [params.carouselCustomers]
     items = 6
@@ -231,12 +181,4 @@ pluralizelisttitles = false
 
 [params.features]
     enable = true
-    cols = 3 # Default: 3, Available values 2,3,4,6
-    # All features are defined in their own files. You can find example items
-    # at 'exampleSite/data/features'.
-    # For more information take a look at the README.
-
-[taxonomies]
-  category = "categories"
-  tag = "tags"
-  author = "authors"
+    cols = 3
