--- a/data/makerspace/electronics.yaml
+++ b/data/makerspace/electronics.yaml
@@ -3,5 +3,5 @@ name: "Electronics lab"
 description: "Electronics lab descriptive text"
 url: "/makerspace/electronics"
 # temp image by Michael Schwarzenberger from Pixabay
-small_img: "img/makerspace/generic_pcb.jpg"
+thumbnail_url: "img/makerspace/thumbnails/electronics.jpg"
 hasCourse: true
