Quickfix use markdown renderer to render html from yaml data file
..because newline in any form does not affect textblock p

--- a/config.toml
+++ b/config.toml
@@ -118,3 +118,9 @@ pluralizelisttitles = false
 
 [params.features]
     cols = 3
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
