Fix style on home page
Also remove unsafe markdown renderer

--- a/data/carousel/multipurpose.yaml
+++ b/data/carousel/multipurpose.yaml
@@ -1,5 +1,5 @@
 weight: 1
-title: "The largest makerspace in Norden
-Water jet. Laser. VR."
+title: "The largest makerspace in Norden<br><br>
+Water jet<br>Laser<br>VR"
 description: ""
 image: "img/logo_transparent_white.png"
