Review fixes hide links in navbar and re-order

--- a/config.toml
+++ b/config.toml
@@ -27,11 +27,11 @@ pluralizelisttitles = false
     url        = "/makerspace/"
     weight     = 2
 
-[[menu.main]]
-    name       = "FUSE"
-    identifier = "menu.fuse"
-    url        = "/fuse/"
-    weight     = 3
+#[[menu.main]]
+#    name       = "FUSE"
+#    identifier = "menu.fuse"
+#    url        = "/fuse/"
+#    weight     = 3
 
 [[menu.main]]
     name       = "Courses"
@@ -59,18 +59,18 @@ pluralizelisttitles = false
     url        = "/about/docs"
     weight     = 2
 
-[[menu.main]]
-    name       = "Rules"
-    parent     = "menu.about"
-    identifier = "menu.rules"
-    url        = "/about/rules"
-    weight     = 3
+#[[menu.main]]
+#    name       = "Rules"
+#    parent     = "menu.about"
+#    identifier = "menu.rules"
+#    url        = "/about/rules"
+#    weight     = 3
 
-[[menu.main]]
-    name       = "Inspiration"
-    identifier = "menu.inspiration"
-    url        = "/inspiration/"
-    weight     = 6
+#[[menu.main]]
+#    name       = "Inspiration"
+#    identifier = "menu.inspiration"
+#    url        = "/inspiration/"
+#    weight     = 6
 
 [[menu.main]]
     name       = "FAQ"
