--- a/data/docs/code_of_conduct.yaml
+++ b/data/docs/code_of_conduct.yaml
@@ -1,8 +1,13 @@
-weight: 2
-name: "Code of conduct"
+weight: 1
+name: "Regulations & Code of conduct"
 list:
   -
-    name: "Code of conduct"
+    name: "Regulations and Code of Conduct"
     language: "ENG"
-    date: "2023-07-2"
-    url: "/pdf/docs/code_of_conduct_2023-07-2.pdf"
+    date: "2023-08-06"
+    url: "/pdf/docs/regulations_and_code_of_conduct_2023-08-06.pdf"
+  -
+    name: "Rules for membership"
+    language: "ENG"
+    date: "2023-08-06"
+    url: "/pdf/docs/rules_for_membership_2023-08-06.pdf"
