--- a/config.toml
+++ b/config.toml
@@ -105,8 +105,8 @@ pluralizelisttitles = false
     disabled_logo = false
     logo_text = "T-RAX"
 
-    logo = "img/logo.png"
-    # logo_small = "img/logo-small.png"
+    logo = "img/logo/logo.png"
+    # logo_small = "img/logo/logo-small.png"
 
 [params.makerspace]
     # Control how many cards per row to display
