--- a/data/footer/find_us.yaml
+++ b/data/footer/find_us.yaml
@@ -1,6 +1,6 @@
 -
   title: "Opening hours"
-  desc: "<p class=\"text-secondary\">Wednesday 17:00 - 18:00</p>"
+  desc: "<p class=\"text-secondary\">Mon 18:30-20:00<br>Thu 17:30-20:00</p>"
 
 -
   title: "Address"
