Add real text to feature partial

--- a/data/features/print.yaml
+++ b/data/features/print.yaml
@@ -2,4 +2,6 @@ weight: 2
 name: "3D Printing"
 icon: "fas fa-print"
 url: ""
-description: "BLABLABLABLABLA"
+description: "Want to learn how to make flawless 3D prints?
+We have multiple printers available in our rapid prototyping lab.
+Once you take our course you gain access to our printers!"
