--- a/data/features/vr.yaml
+++ b/data/features/vr.yaml
@@ -3,4 +3,4 @@ name: "VR"
 icon: "fa-solid fa-vr-cardboard"
 url: ""
 description: "Interested in learning 3D design and exploring virtual realities?
-As a member you get access to FUSE VR studio. Clich here on the icon to learn more"
+ As a member you get access to FUSE VR studio."
