--- a/data/docs/code_of_conduct.yaml
+++ b/data/docs/code_of_conduct.yaml
@@ -11,3 +11,9 @@ list:
     language: "ENG"
     date: "2023-08-06"
     url: "/pdf/docs/rules_for_membership_2023-08-06.pdf"
+
+  -
+    name: "Reviderade stadgar"
+    language: "SWE"
+    date: "2022-02-22"
+    url: "/pdf/docs/reviderade_stadgar_2022-02-22.pdf"
