--- a/data/docs/code_of_conduct.yaml
+++ b/data/docs/code_of_conduct.yaml
@@ -13,7 +13,7 @@ list:
     url: "/pdf/docs/rules_for_membership_2023-08-06.pdf"
 
   -
-    name: "Reviderade stadgar"
+    name: "Stadgar"
     language: "SWE"
     date: "2022-02-22"
     url: "/pdf/docs/reviderade_stadgar_2022-02-22.pdf"
