--- a/data/membership/steps.yaml
+++ b/data/membership/steps.yaml
@@ -13,7 +13,7 @@
   description: "Pay for membership (50SEK per study year)
   <br>during <b>open hours at the T-RAX office</b>.
   <br>
-  Opening hours can be found in the footer of this page."
+  Opening hours can be found in the bottom of this page."
   icon_url: "img/icons/subtitle_2.png"
 
 -
