Adjust become member page

--- a/data/membership/steps.yaml
+++ b/data/membership/steps.yaml
@@ -36,7 +36,7 @@
   title: "What's next?"
   description: "You need to finish a course in the makerspace you want to gain access to.
   <br>
-  After you have attended a couse your access will be processed (2-3 work days).
+  After you have attended a couse your access will be processed (up to 2 weeks).
   You will get notified when access has been granted.
   <br><br>
   <b><a href=\"/makerspace/\">All our makerspaces and courses can be found here</a></b>"
