--- a/data/membership/steps.yaml
+++ b/data/membership/steps.yaml
@@ -20,8 +20,9 @@
   weight: 3
   title: "Third step"
   description: "Attend a safety walk-through. <br>
-  Safety walk-throughs are held by T-RAX board members. <br>
-  Information about upcoming safety walk-throughs can be <br> <b>found on our social media</b>.
+  Safety walk-throughs are held by T-RAX board members<br>
+  <b>on thursday open hours,</b> starting at the T-RAX office.<br>
+  Opening hours can be found in the bottom of this page.
   <br>
   <br>
   Once the safety walk-through is completed you are allowed in T-RAX
