Clarify safety walk-through open hours

--- a/data/membership/steps.yaml
+++ b/data/membership/steps.yaml
@@ -21,8 +21,9 @@
   title: "Third step"
   description: "Attend a safety walk-through. <br>
   Safety walk-throughs are held by T-RAX board members<br>
-  <b>on thursday open hours,</b> starting at the T-RAX office.<br>
-  Opening hours can be found in the bottom of this page.
+  <b>on Thursdays, safety walk-throughs starts 17:30</b>.<br>
+  Open hours 17:30-20:00* @ T-RAX office.<br>
+  (<i>*Closed first & last week of every study period)</i>).
   <br>
   <br>
   Once the safety walk-through is completed you are allowed in T-RAX
