Add thumbnails to all makerspace
Remove descriptive text

--- a/data/makerspace/electronics.yaml
+++ b/data/makerspace/electronics.yaml
@@ -1,6 +1,6 @@
 weight: 5
 name: "Electronics lab"
-description: "Electronics lab descriptive text"
+description: ""
 url: "/makerspace/electronics"
 # temp image by Michael Schwarzenberger from Pixabay
 thumbnail_url: "img/makerspace/thumbnails/electronics.jpg"
