--- a/data/makerspace/film_and_pod.yaml
+++ b/data/makerspace/film_and_pod.yaml
@@ -1,6 +1,6 @@
 weight: 7
 name: "Film & pod studio"
-description: "Film & pod studio descriptive text"
+description: ""
 url: "/makerspace/film_and_pod"
 thumbnail_url: "img/makerspace/thumbnails/film_and_pod.jpg"
 hasCourse: true
