--- a/data/makerspace/metal.yaml
+++ b/data/makerspace/metal.yaml
@@ -1,6 +1,6 @@
 weight: 3
 name: "Metal workshop"
-description: "Metal workshop descriptive text"
+description: ""
 url: "/makerspace/metal"
 thumbnail_url: "img/makerspace/thumbnails/metal.jpg"
 hasCourse: true
