--- a/data/makerspace/rapid.yaml
+++ b/data/makerspace/rapid.yaml
@@ -1,6 +1,6 @@
 weight: 1
 name: "Rapid prototyping"
-description: "Lab for rapid prototyping descriptive text"
+description: ""
 thumbnail_url: "img/makerspace/thumbnails/rapid.jpg"
 url: "/makerspace/rapid"
 hasCourse: true
