--- a/data/makerspace/textile.yaml
+++ b/data/makerspace/textile.yaml
@@ -1,6 +1,6 @@
 weight: 2
 name: "Textile workshop"
-description: "Textile workshop descriptive text"
+description: ""
 url: "/makerspace/textile"
 thumbnail_url: "img/makerspace/thumbnails/textile.jpg"
 hasCourse: true
