--- a/data/makerspace/wood.yaml
+++ b/data/makerspace/wood.yaml
@@ -1,5 +1,6 @@
 weight: 4
 name: "Wood workshop"
-description: "Wood workshop descriptive text"
+description: ""
 url: "/makerspace/wood"
+thumbnail_url: "/img/makerspace/thumbnails/wood.jpg"
 hasCourse: true
