Major refactoring of makerspace doc pages
Show courses tied to a makerspace
Show course material tied to a makerspace
All course material is available on document page
All courses are available on course & event page

--- a/data/makerspace/electronics.yaml
+++ b/data/makerspace/electronics.yaml
@@ -3,4 +3,4 @@ name: "Electronics lab"
 description: ""
 url: "/makerspace/electronics"
 thumbnail_url: "img/makerspace/thumbnails/electronics.jpg"
-hasCourse: true
+under_construction: true
