--- a/data/makerspace/film_and_pod.yaml
+++ b/data/makerspace/film_and_pod.yaml
@@ -3,4 +3,4 @@ name: "Film & pod studio"
 description: ""
 url: "/makerspace/film_and_pod"
 thumbnail_url: "img/makerspace/thumbnails/film_and_pod.jpg"
-hasCourse: true
+under_construction: true
