Add support for all docs to be added to makerspace page
Add latest wood makerspace rules, move prev to old

Make doc category old that is not included on makerspace pages

--- a/data/docs/labs_and_workshops.yaml
+++ b/data/docs/labs_and_workshops.yaml
@@ -3,11 +3,13 @@ name: "Labs and workshops"
 list:
   -
     name: "Metal Workshop Rules"
+    makerspace: "metal"
     language: "ENG"
     date: "2023-08-06"
     url: "/pdf/docs/metal_workshop_rules_2023-08-06.pdf"
   -
     name: "Wood Workshop Rules"
+    makerspace: "wood"
     language: "ENG"
-    date: "2023-08-06"
-    url: "/pdf/docs/wood_workshop_rules_2023-08-06.pdf"
+    date: "2023-11-24"
+    url: "/pdf/docs/wood_workshop_rules_2023-11-24.pdf"
