--- a/data/makerspace/electronics.yaml
+++ b/data/makerspace/electronics.yaml
@@ -3,4 +3,21 @@ name: "Electronics lab"
 description: ""
 url: "/makerspace/electronics"
 thumbnail_url: "img/makerspace/thumbnails/electronics.jpg"
-under_construction: true
+under_construction: false
+
+content:
+  -
+    weight: 1
+    name: "About"
+    id: "about"
+    description: "
+    Are you fascinated by the fundamentals of electronics and eager to bring your ideas to life? Step into our Basic Electronics Lab, where the essentials meet innovation. 
+    Our lab provides the core tools you need to embark on your journey into the world of electronics.
+    <br><br>
+    Here, you'll find a selection of basic soldering stations, ideal for assembling simple circuits and learning the art of soldering. 
+    Our oscilloscopes, while fundamental, are perfect for introducing you to the visualization of electronic signals. With a variety of basic electronic components like resistors, capacitors, and LEDs, you can start building and experimenting right away.
+    <br><br>
+    We also offer breadboards for easy prototyping without the need for permanent soldering, making it ideal for beginners and those looking to test their ideas quickly. 
+    Join us in our electronics workshops for an introductory experience, or contact us with your queries. Our Basic Electronics Lab is a starting point for curiosity and creativity in the electronic world.
+    "
+
