Updated step on website and added canvas link in steps.yaml

--- a/data/membership/steps.yaml
+++ b/data/membership/steps.yaml
@@ -19,10 +19,14 @@
 -
   weight: 3
   title: "Third step"
-  description: "Create an account at skedda. 
-  <br> To create an account att skedda, log in with SSO.
+  description: "Enroll in our Canvas.
+  <br> When enrolled read through all the available course materials in 
+  <br><i>Safety at Fuse</i> and complete the quizes.
   <br>
-  <b><a href=\"https://chalmersfuse.skedda.com\"> Go to Chalmers FUSE skedda</a></b>
+  <br> Click the link below to enroll with your SSO account.
+  <br>
+  
+  <b><a href=\"https://chalmers.instructure.com/enroll/8AGEM6\"> Go to Chalmers FUSE Canvas</a></b>
   "
   icon_url: "img/icons/subtitle_3.png"
 
