Added the new stadgar and change the link in code_of_conduct.yaml

--- a/data/docs/code_of_conduct.yaml
+++ b/data/docs/code_of_conduct.yaml
@@ -14,5 +14,5 @@ list:
   -
     name: "Stadgar"
     language: "SWE"
-    date: "2022-02-22"
-    url: "/pdf/docs/reviderade_stadgar_2022-02-22.pdf"
+    date: "2024-08-31"
+    url: "/pdf/docs/T-rax stadga.pdf"
