--- a/config.toml
+++ b/config.toml
@@ -86,7 +86,7 @@ pluralizelisttitles = false
     disabled_logo = false
     logo_text = "T-RAX"
 
-    logo = "img/logo/logo.png"
+    logo = "img/logo/logo_color.png"
     # logo_small = "img/logo/logo-small.png"
 
 [params.makerspace]
