--- a/data/membership/steps.yaml
+++ b/data/membership/steps.yaml
@@ -19,11 +19,12 @@
 -
   weight: 3
   title: "Third step"
-  description: "Enroll in our Canvas.
-  <br> Click the link below to enroll with your SSO account.
+  description: "Enroll in our Canvas & log into Skedda.
+  <br> Click the links below to enroll with your SSO account.
   <br>
   
-  <b><a href=\"https://chalmers.instructure.com/enroll/8AGEM6\"> Go to Chalmers FUSE Canvas</a></b>
+  <b><a href=\"https://chalmers.instructure.com/enroll/8AGEM6\"> Go to Chalmers FUSE Canvas</a></b> <br>
+  <b><a href=\"https://chalmersfuse.skedda.com\"> Go to Skedda</a></b>
   "
   icon_url: "img/icons/subtitle_3.png"
 
@@ -34,9 +35,9 @@
   Safety walk-throughs are held by T-RAX board members<br>
   <b>on Wednesday, safety walk-throughs starts 17:30</b>.<br>
   <br>
-  Once the safety walk-through is completed you are allowed in T-RAX
+  Once the safety walk-through is completed you are allowed in  
   <br>
-  common areas & study rooms.
+  T-RAX common areas & study rooms.
   <br>
   (<i>Congratulations you are now a member!</i>🥳)"
   icon_url: "img/icons/subtitle_4.png"
